Update MagiciansRevealV2.ps1